Fix overlay loading screen for Renew page on mobile

--- a/themes/evolve/lessc/popups.less
+++ b/themes/evolve/lessc/popups.less
@@ -339,6 +339,9 @@ include the following div to the template where overlay is needed
     background-size: contain;
     background-position: 50%;
     background-repeat: no-repeat;
+    @media @larger-phone-width-down{
+        background-image: url(/sites/default/files/DASHBOARD/renew-membership/MEMBERSHIP_376X366.png);
+    }
     .loaders{
         visibility: visible;
         .loader-quart{
